kubernetes/mini/apps/downloads/radarr/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: radarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: recyclarr
        - matchLabels:
            app.kubernetes.io/name: bazarr
        - matchLabels:
            app.kubernetes.io/name: jellyseerr
            io.kubernetes.pod.namespace: media
        - matchLabels:
            app.kubernetes.io/name: homepage
            io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP

  egress:
    - toEndpoints: # prowlarr
        - matchLabels:
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
    - toEndpoints: # sabnzbd
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: api.radarr.video   # api
        - matchName: radarr.servarr.com # update check
        - matchName: image.tmdb.org     # info
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
